@@ -11,7 +11,6 @@ env:
 
 matrix:
   include:
-      - env: MB_PYTHON_VERSION=3.6
       - env: MB_PYTHON_VERSION=3.8
       - env: MB_PYTHON_VERSION=3.9
         env:
